index.css
*{
    margin: 0;
    box-sizing: border-box;
}

#page-wrapper{
    width:80vw;
    margin: 0 auto;
    text-align: left;
}


#container{
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    border-top: 4px solid #395c6b;
    border-bottom: 4px solid #395c6b;
}

#headshot{
    display: inline;
    max-width: 30%;
    padding: 20px 20px;
    text-align: left;
}

#intro{
    display: flex;
    text-align: left;
    padding: 20px;
}

.contact{
    padding-left: 20px;
}

.schools{
    padding-top: 10px;
    padding-left: 20px;
    list-style: none;
}


header,footer{
    background-color: #fdbe7b;
    color: white;
    text-align: left;
    padding-left: 10px;
}

header p{
    font-size: calc(2px + 2vw);
}

footer{
    padding: 10px;
}

nav{
    background-color: #c0d1e3;
    width: 30vw;
}

nav ul{
    list-style: none;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    padding-left: 0;
    text-align: center;
    text-decoration: none;
}

nav a{
    display: block;
    text-decoration: none;
    color: floralwhite;
    width: 100%;
    font-size: calc(2px + 2vw);
    border: 4px solid #395c6b;
    padding: 15px 26px;
    margin: 10px;
}

main{
    background-color: #ffefd3;
    height: 100vh;
    width: 70%;
}

/*Bellow this line is my mobile design*/

@media screen and (max-width:1000px){
    #container{
        flex-direction: column;
    }

    header,footer{
        text-align: center;
    }

    nav{
        width: 100%;
    }

    nav ul{
        flex-direction: row;
        justify-content: space-evenly;
    }

    main{
        width: 100%;
    }

}

